<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- PreviewView cho camera preview -->
    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/btnCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_photo"
        android:layout_below="@id/previewView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />


    <Button
        android:id="@+id/btnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_5s"
        android:layout_below="@id/previewView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp" />


    <!-- TextView để hiển thị kết quả dự đoán -->
    <TextView
        android:id="@+id/tvPrediction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prediction"
        android:textSize="20sp"
        android:layout_below="@id/btnCapture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />
</RelativeLayout>